# NemoClaw-Workshop

./: .env.example  .gitattributes  .gitignore  Operation_Sentinel_Scenario_v1.md  PROJECT.md  PROJECT_HANDOFF.md  README.md  atas-email-api.yaml.template  docker-compose.yml  email_api_smoke.sqlite  requirements.txt
docs/: BREV_INSTRUCTOR_RUNBOOK.md  BREV_STUDENT_GUIDE.md  Project_ATaS_Workshop_Script_Draft.md
fake-email-api/: Dockerfile
fake-email-api/app/: main.py  models.py  policy.py  storage.py
fake-email-api/app/static/: index.html
fake-email-api/data/: atas_seed_emails.json  seed_emails.json
fake-email-api/data/attachments/: ATaS_Briefing_Agenda.ics  ATaS_Congressional_Brief_v12.pptx  ATaS_Congressional_Brief_v13.pptx  ATaS_Talking_Points.docx  Congressional_Questions.docx  JIAITF_Action_Tracker.xlsx  (+1 more)
project_atas_content_generator/: .env.example  README.md  pyproject.toml  requirements.txt
project_atas_content_generator/atas_generator/: __init__.py  cli.py  generator.py  io.py  prompts.py  providers.py  scenario.py  validation.py
project_atas_content_generator/project_atas_content_generator.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
project_atas_content_generator/scenario/: character_knowledge_states.json  emails_blueprint.json  thread_catalog.json
project_atas_content_generator/scripts/: build_static_attachments.py  build_xlsx_attachments.mjs  generate_remaining.sh
project_atas_content_generator/tests/: test_pipeline.py
scripts/: check-brev-lab.sh  setup-brev-instance.sh
student-lab/: mission-prompt.md
